# gitstorian

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  install.sh  toast.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
src/: main.rs
